--- a/COVID19-slides.html
+++ b/COVID19-slides.html
@@ -3,7 +3,7 @@
   <head>
     <title>SARS-CoV-2 Pandemic 2019-now</title>
     <meta charset="utf-8" />
-    <meta name="author" content="Elena Dudukina, Raquel Raquel Avelar" />
+    <meta name="author" content="Author: Elena Dudukina, PhD student" />
     <meta name="date" content="2020-04-08" />
     <link rel="stylesheet" href="xaringan-themer.css" type="text/css" />
   </head>
@@ -13,7 +13,7 @@ class: center, middle, inverse, title-slide
 
 # SARS-CoV-2 Pandemic 2019-now
 ## Introduction to the little known
-### Elena Dudukina, Raquel Raquel Avelar
+### Author: Elena Dudukina, PhD student
 ### 2020-04-08
 
 ---
@@ -359,6 +359,10 @@ Postinfectious | Host is no longer capable of transmission
 - https://twitter.com/EpiEllie
 - https://twitter.com/mlipsitch
 - https://twitter.com/CT_Bergstrom
+
+# Aknowledgements
+- Raquel Nogueira Avelar E SilvaMSc, Postdoc
+- Deirdre Cronin Fenton, Associate professor
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
