add raquel as a presenter

--- a/COVID19-slides.html
+++ b/COVID19-slides.html
@@ -4,7 +4,7 @@
     <title>SARS-CoV-2 Pandemic 2019-now</title>
     <meta charset="utf-8" />
     <meta name="author" content="Author: Elena Dudukina, PhD student" />
-    <meta name="date" content="2020-04-08" />
+    <meta name="date" content="2020-04-20" />
     <link rel="stylesheet" href="xaringan-themer.css" type="text/css" />
   </head>
   <body>
@@ -14,7 +14,7 @@ class: center, middle, inverse, title-slide
 # SARS-CoV-2 Pandemic 2019-now
 ## Introduction to the little known
 ### Author: Elena Dudukina, PhD student
-### 2020-04-08
+### 2020-04-20
 
 ---
 
@@ -260,6 +260,14 @@ Postinfectious | Host is no longer capable of transmission
 .pull-right[
 ![](covid-comorbid.png)
 ]
+
+---
+class: inverse
+
+ # Treatment of COVID-19 and other aspects
+
+# Raquel Nogueira Avelar E Silva, MSc, Postdoc
+
 ---
 # Treatment of COVID-19
 - No specific treatment available
@@ -280,6 +288,24 @@ Postinfectious | Host is no longer capable of transmission
 ---
 # Study of chloroquine + azytromycin
 ![](chlor-azytro.png)
+
+
+---
+# Ethical conduct of research
+
+.pull-left[
+&lt;blockquote class="twitter-tweet"&gt;&lt;p lang="en" dir="ltr"&gt;I asked Newsweek if they could add the link. &lt;br&gt;Here is that blog post, in case you wondered:&lt;a href="https://t.co/Ez5dnm8hoM"&gt;https://t.co/Ez5dnm8hoM&lt;/a&gt;&lt;/p&gt;&amp;mdash; Elisabeth StayingAtHome StayingAlive Bik (@MicrobiomDigest) &lt;a href="https://twitter.com/MicrobiomDigest/status/1247402645553176578?ref_src=twsrc%5Etfw"&gt;April 7, 2020&lt;/a&gt;&lt;/blockquote&gt; &lt;script async src="https://platform.twitter.com/widgets.js" charset="utf-8"&gt;&lt;/script&gt;
+]
+
+.pull-right[
+- Peer-review?
+- Conflict of interests
+
+.pull-right[![](title-authors-and-received-accepted-dates-marked.png)]
+
+
+.pull-left[![](editorial-board-of-the-journal.png)]
+]
 
 ---
 # Points of concern
@@ -303,22 +329,6 @@ Postinfectious | Host is no longer capable of transmission
 
 [Dahly, Gates, Morris, 2020](https://zenodo.org/record/3724167#.XowsG9IzbBQ)]
 
----
-# Ethical conduct of research
-
-.pull-left[
-&lt;blockquote class="twitter-tweet"&gt;&lt;p lang="en" dir="ltr"&gt;I asked Newsweek if they could add the link. &lt;br&gt;Here is that blog post, in case you wondered:&lt;a href="https://t.co/Ez5dnm8hoM"&gt;https://t.co/Ez5dnm8hoM&lt;/a&gt;&lt;/p&gt;&amp;mdash; Elisabeth StayingAtHome StayingAlive Bik (@MicrobiomDigest) &lt;a href="https://twitter.com/MicrobiomDigest/status/1247402645553176578?ref_src=twsrc%5Etfw"&gt;April 7, 2020&lt;/a&gt;&lt;/blockquote&gt; &lt;script async src="https://platform.twitter.com/widgets.js" charset="utf-8"&gt;&lt;/script&gt;
-]
-
-.pull-right[
-- Peer-review?
-- Conflict of interests
-
-.pull-right[![](title-authors-and-received-accepted-dates-marked.png)]
-
-
-.pull-left[![](editorial-board-of-the-journal.png)]
-]
 ---
 
 # Vaccine development
@@ -361,7 +371,7 @@ Postinfectious | Host is no longer capable of transmission
 - https://twitter.com/CT_Bergstrom
 
 # Aknowledgements
-- Raquel Nogueira Avelar E SilvaMSc, Postdoc
+- Raquel Nogueira Avelar E Silva, MSc, Postdoc
 - Deirdre Cronin Fenton, Associate professor
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
