upd raquel's name

--- a/COVID19-slides.html
+++ b/COVID19-slides.html
@@ -3,7 +3,7 @@
   <head>
     <title>SARS-CoV-2 Pandemic 2019-now</title>
     <meta charset="utf-8" />
-    <meta name="author" content="Author: Elena Dudukina, PhD student" />
+    <meta name="author" content="Author: Elena Dudukina, PhD student. Presenters: Elena Dudukina, Raquel Nogueira Avelar e Silva" />
     <meta name="date" content="2020-04-20" />
     <link rel="stylesheet" href="xaringan-themer.css" type="text/css" />
   </head>
@@ -13,7 +13,7 @@ class: center, middle, inverse, title-slide
 
 # SARS-CoV-2 Pandemic 2019-now
 ## Introduction to the little known
-### Author: Elena Dudukina, PhD student
+### Author: Elena Dudukina, PhD student. Presenters: Elena Dudukina, Raquel Nogueira Avelar e Silva
 ### 2020-04-20
 
 ---
@@ -266,7 +266,7 @@ class: inverse
 
  # Treatment of COVID-19 and other aspects
 
-# Raquel Nogueira Avelar E Silva, MSc, Postdoc
+**Presenter: Raquel Nogueira Avelar e Silva, MSc, PhD, Postdoc**
 
 ---
 # Treatment of COVID-19
@@ -371,7 +371,7 @@ class: inverse
 - https://twitter.com/CT_Bergstrom
 
 # Aknowledgements
-- Raquel Nogueira Avelar E Silva, MSc, Postdoc
+- Raquel Nogueira Avelar e Silva, MSc, PhD, Postdoc
 - Deirdre Cronin Fenton, Associate professor
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
